# haskell-cabal-simple-project

./: cabal.sandbox.config  catn.cabal  expected.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
