name:                           catn
version:                        0.1.0.0
category:                       Utils
build-type:                     Simple
cabal-version:                  >=1.10


executable catn
  hs-source-dirs:               .
  default-language:             Haskell2010
  build-depends:                base >= 4.7 && < 5
